WIP. Clean up parallax window CSS. Get background overlap issue fixed.

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -4,7 +4,6 @@
     @include content-wrapper;
 
     &__content-wrapper {
-        margin-top: 4rem;
         padding: 4rem 0;
     }
 
