--- a/src/components/parallax-components/parallax-window.scss
+++ b/src/components/parallax-components/parallax-window.scss
@@ -1,125 +1,23 @@
 @import "../../globals.scss";
 
-.home {
-  &__parallax {
-    background-color: $primary-background-color;
-  }
-  &__content-wrapper {
-    margin: 0 auto;
-    padding: 2rem 4rem;
-    width: 100%;
-    max-width: $content-width;
-    box-sizing: border-box;
-
-    @include small-screen {
-      padding: 1rem 2rem;
-    }
-  }
-
-  &__hero-title-wrapper {
-    position: absolute;
-    left: 50%;
-    top: 80%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-
-  &__hero-title {
-    color: white;
-    text-align: center;
-    font-size: 4.2vw;
-  }
-}
-
-.parallax__solid {
-  z-index: 5;
-  background-color: $primary-background-color;
-}
-
-.parallax__window {
-  z-index: 2;
-}
-
-.parallax__layer--base {
-  z-index: 5;
-}
-
-#bg-image-1 {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 0 0%;
-  background-image: url("../../images/hero.jpg");
-  z-index: 0;
-}
-
-.debug {
-  position: fixed;
-  top: 0;
-  left: 0.5em;
-  z-index: 999;
-  background: rgba(0, 0, 0, 0.85);
-  color: white;
-  padding: 0.5rem;
-  border-radius: 0 0 5px 5px;
-}
-
-.parallax {
-  perspective: 250px;
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  font-size: 200%;
-}
-
-.debug-on .parallax__group {
-  transform: translate3d(700px, 0, -800px) rotateY(30deg);
-}
-
-.parallax__group {
+.parallax-window {
+  height: 30vh;
   position: relative;
-  height: 100vh;
   transform-style: preserve-3d;
-  transition: transform 0.5s;
+  overflow: hidden;
 
-  &--solid {
-    height: auto;
+  &__image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translate3d(0, -20%, -300px) scale(2.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: 0;
+    background-image: url("../../images/hero.jpg");
+    z-index: 0;
+    height: 70vh;
   }
-}
-
-.center {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.mock-navbar {
-  height: 4rem;
-}
-
-.mock-hero {
-  height: 70vh;
-}
-
-.parallax__layer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  &--base {
-    position: relative;
-  }
-}
-
-.debug-on .parallax__layer {
-  box-shadow: 0 0 0 2px black;
-}
-
-.parallax__layer--base {
-  transform: translateZ(0);
-  z-index: 4;
-}
-.parallax__layer--back {
-  transform: translateZ(-300px) scale(2.5);
 }
